--- a/src/app/views/deck-quote-edit/deck-quote-edit.component.html
+++ b/src/app/views/deck-quote-edit/deck-quote-edit.component.html
@@ -1,6 +1,7 @@
-<div class="d-flex mb-3">
-  <div class="flex-fill border-bottom pb-2">
-    <h2 >Deck {{ this.quoteId != 'new' ? 'Edit' : 'Create'}}</h2>
+<div class="d-flex justify-content-between">
+  <div class="flex-fill  border-bottom">
+      <h2 >Deck {{ this.quoteId != 'new' ? 'Edit' : 'Create'}} </h2>
+    
   </div>
 
   <!-- Main Menu -->
@@ -10,6 +11,10 @@
     <a class="nav-link active" type="button" data-bs-toggle="tab" data-bs-target="#estimate">Estimate</a>
     <a class="nav-link " type="button" data-bs-toggle="tab" data-bs-target="#material-order">Material Order</a>
   </nav>
+</div>
+
+<div class="d-flex  flex-fill mb-3">
+  <p class="text-secondary fs-6 ">{{customer?.lastName}}, {{customer?.firstName}} - {{ deckQuote?.jobAddress }}</p>
 </div>
 
 <!-- Main Panel -->
